started modularizing functions

--- a/src/synthetic_data_generator/generate.ipynb
+++ b/src/synthetic_data_generator/generate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "390a5dbe",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "0eb9c6c7",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "160584ab",
    "metadata": {},
    "outputs": [],
@@ -74,19 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2fd3fc84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/davide/Documents/Projects/Chapter_Extractor/src/synthetic_data_generator/utils.py:29: UserWarning: max range set equal to book's chapters number \n",
-      "  warnings.warn(\"max range set equal to book's chapters number \", category=UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Randomness parameters for synthetic data generation\n",
     "subchapters_random_noise_param = [.1, .2, .3]\n",
@@ -95,7 +86,7 @@
     "add_subchapters_param = [.2, .3]\n",
     "\n",
     "# parameters for the number of iterations\n",
-    "n_iterations = 1\n",
+    "n_iterations = 3\n",
     "synthetic_data = []\n",
     "\n",
     "for chapters_random_noise in chapters_random_noise_param:\n",
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "2908f1f5",
    "metadata": {},
    "outputs": [
@@ -131,133 +122,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chapter 1 Smart Grid and Energy Management\n",
-      "3\n",
-      " 1.1 Distributed Energy Resources\n",
-      " 1.2 Smart Grid Infrastructure\n",
-      "  1.3 Future Grid Technologies\n",
-      "[<\n",
-      "1.4 Consumer Energy Portals\n",
-      "chapter 2 Green Building and Energy Efficiency\n",
-      "  37\n",
-      "2.1 Water Conservation Systems\n",
-      "  2.2 HVAC Optimization Technologies\n",
-      "2.3 Energy Audit and Assessment\n",
-      "2.4 Green Roof and Wall Systems\n",
-      "2.5 Smart Window Technologies\n",
-      "2.6 Retrofitting and Modernization\n",
-      "2.7 Indoor Air Quality Management\n",
-      "  2.8 Building Energy Management Systems\n",
-      "2.9 Building Automation Systems\n",
-      "3.0 LED Lighting and Smart Controls\n",
-      "3.1 Passive House Design Principles\n",
-      "chapter 3 Energy Storage and Battery Technology\n",
-      "69\n",
-      " 3.1 Hydrogen Storage Solutions\n",
-      "3.2 Compressed Air Energy Storage\n",
-      "for software systems Testing and procedures validation\n",
-      "3.3 Residential Storage Solutions\n",
-      "3.4 Emerging Storage Technologies\n",
-      "3.5 Lithium-Ion Battery Systems\n",
-      " 3.6 Safety and Risk Management\n",
-      "3.7 Electric Vehicle Battery Integration\n",
-      "3.8 Thermal Energy Storage\n",
-      "3.9 Economic Viability Analysis\n",
-      "4.0 Grid-Scale Storage Systems\n",
-      " 4.1 Flow Battery Technologies\n",
-      "4.2 Pumped Hydro Storage\n",
-      "4.3 Recycling and Sustainability\n",
-      "4.4 Flywheel Energy Storage\n",
-      "4.5 Battery Management Systems\n",
-      "and work Team\n",
-      "chapter 4 Electric Vehicle Infrastructure\n",
-      " 97\n",
-      "<;\n",
-      " 4.1 Public Transportation Electrification\n",
-      "  4.2 Charging Standards and Protocols\n",
-      " 4.3 Fleet Management Solutions\n",
-      "4.4 Charging Infrastructure Planning\n",
-      "4.5 Battery Swapping Stations\n",
-      "  4.6 Grid Impact Analysis\n",
-      "4.7 Fast Charging Technologies\n",
-      "  4.8 Payment and Billing Systems\n",
-      "4.9 Wireless Charging Systems\n",
-      "34\n",
-      "chapter 5 Renewable Energy Systems\n",
-      "109\n",
-      "• • • • • • • •\n",
-      "5.1 Renewable Energy Storage\n",
-      "scenarios business Practical in applications real-world\n",
-      "5.2 Future Renewable Technologies\n",
-      "  5.3 Hydroelectric Power Solutions\n",
-      "5.4 Geothermal Energy Applications\n",
-      "5.5 Environmental Impact Assessment\n",
-      " 5.6 Grid Integration Challenges\n",
-      "1\n",
-      "5.7 Solar Power Technology Advances\n",
-      "5.8 Policy and Regulatory Framework\n",
-      "5.9 Hybrid Renewable Systems\n",
-      "|=^\n",
-      " 6.0 Wind Energy Generation Systems\n",
-      "6.1 Biomass and Bioenergy Systems\n",
-      " 6.2 Ocean and Tidal Energy\n",
-      "6.3 Energy Conversion Efficiency\n",
-      "6.4 Cost Analysis and Economics\n",
-      " 6.5 Distributed Generation Networks\n",
-      "chapter 6 Hydrogen and Fuel Cell Technology\n",
-      " 142\n",
-      "  6.1 Fuel Cell Manufacturing\n",
-      "6.2 Future Hydrogen Economy\n",
-      "6.3 Electrolysis and Green Hydrogen\n",
-      "chapter 7 Carbon Capture and Climate Solutions\n",
-      " 183\n",
-      "7.1 Carbon Credit Systems\n",
-      " 7.2 Policy and Economic Incentives\n",
-      "7.3 Technology Integration\n",
-      "7.4 Carbon Mineralization\n",
-      " 7.5 Climate Engineering Approaches\n",
-      "7.6 Monitoring and Verification\n",
-      " 7.7 Enhanced Oil Recovery\n",
-      "  7.8 Direct Air Capture Systems\n",
-      "7.9 Industrial CCS Applications\n",
-      "8.0 Life Cycle Assessment\n",
-      "8.1 Ocean Carbon Sequestration\n",
-      "chapter 8 Circular Economy and Waste Management\n",
-      " 214\n",
-      "  8.1 Electronic Waste Management\n",
-      " 8.2 Circular Design Principles\n",
-      "8.3 Water Treatment and Reuse\n",
-      "8.4 Recycling Technology Innovations\n",
-      "  8.5 Material Flow Analysis\n",
-      " 8.6 Product Life Extension\n",
-      "8.7 Waste-to-Energy Systems\n",
-      "8.8 Supply Chain Optimization\n",
-      "914\n",
-      "8.9 Organic Waste Processing\n",
-      "assessment Competitive positioning strategic and landscape\n",
-      "9.0 Urban Mining Strategies\n",
-      "9.1 Industrial Symbiosis\n",
-      "9.2 Packaging Sustainability\n",
-      "9.3 Digital Tracking and Analytics\n",
-      "9.4 Policy and Regulatory Framework\n",
+      "1 Digital Marketing for E-commerce   1\n",
+      "1.1 Influencer Partnership Programs  1\n",
+      "1.2 Cross-Channel Marketing Integration 2\n",
+      "1.3 Retargeting and Remarketing 3\n",
+      "1.4 Product Photography and Videography   4\n",
+      "1.5 Content Marketing for E-commerce 5\n",
+      " 1.6 Social Media Marketing Integration  6\n",
+      "1.7 Conversion Rate Optimization  8\n",
+      " 1.8 Affiliate Marketing Networks 10\n",
+      "reengineering Process optimization strategies\n",
+      " 1.9 Search Engine Optimization for Products 11\n",
+      "1.10 User-Generated Content Campaigns 12\n",
+      "1.11 Email Marketing Automation 13\n",
+      "5635\n",
+      "1.12 Marketing Analytics and Attribution 14\n",
+      "1.13 Pay-Per-Click Advertising Strategies 15\n",
+      "2 Marketplace and Multi-Vendor Platforms 18\n",
+      "2.1 Dispute Resolution Mechanisms 18\n",
+      "2.2 Seller Performance Monitoring  19\n",
+      "2.3 Category Management Strategies 20\n",
+      "2.4 Unified Customer Experience  21\n",
+      "2.5 Multi-Vendor Inventory Management   22\n",
+      "2.6 Competitive Marketplace Strategies 26\n",
+      "2.7 International Marketplace Expansion 29\n",
+      "2.8 Commission and Fee Structure   31\n",
+      " 2.9 Product Quality Control Systems 32\n",
+      "2.10 Payment Distribution Systems 33\n",
+      "2.11 Vendor Onboarding and Management  34\n",
+      "2.12 Platform Governance and Policies 35\n",
+      "strategies Investment capital\n",
+      "2.13 Seller Tools and Analytics  36\n",
+      "2.14 Brand Protection and IP Rights 37\n",
+      "3 Customer Experience and Personalization   39\n",
+      "  3.1 Live Chat and Customer Support  41\n",
+      "  3.2 Personalization Engine Development 42\n",
+      "3.3 User Experience Design Principles  44\n",
+      "3.4 Customer Feedback Integration  52\n",
+      "3.5 Recommendation System Implementation 53\n",
+      "$){\n",
+      "3.6 Search and Discovery Optimization  59\n",
+      "3.7 Virtual Try-On Technologies  62\n",
+      "3.8 Accessibility and Inclusive Design  67\n",
+      "245\n",
+      "4 Supply Chain and Logistics    71\n",
+      "4.1 Real-Time Tracking Systems 71\n",
+      "1109\n",
+      "4.2 Sustainability in Supply Chain 80\n",
+      "[\n",
+      "5 E-commerce Platform Development 129\n",
+      "  5.1 Payment Gateway Integration 132\n",
+      "  5.2 Cloud Infrastructure for Retail 135\n",
+      "5.3 User Account and Profile Systems 140\n",
+      "5.4 Multi-Language and Currency Support 143\n",
+      "5.5 Third-Party Integration APIs  145\n",
+      "5.6 Security and Fraud Prevention  146\n",
+      "6 Mobile Commerce and Apps 149\n",
+      "responsibility and business\n",
+      " 6.1 App Performance Optimization  152\n",
+      ":>+\n",
+      "6.2 User Retention Strategies 158\n",
+      "management solutions Common in challenges project and\n",
+      "6.3 App Store Optimization 159\n",
+      "6.4 Mobile Payment Integration 160\n",
+      "6.5 Mobile-First Design Principles 163\n",
+      "  6.6 Augmented Reality Features 168\n",
+      "6.7 In-App Purchase Systems   171\n",
+      "7 Data Analytics and Business Intelligence 176\n",
+      "7.1 ROI and Performance Measurement 177\n",
+      "7.2 Predictive Analytics Applications  179\n",
+      " 7.3 E-commerce Analytics Implementation   181\n",
+      "7.4 Inventory Analytics and Optimization 185\n",
+      " 7.5 Price Optimization Strategies 186\n",
+      "7.6 Customer Lifetime Value Modeling  187\n",
+      "7.7 Customer Behavior Analysis 192\n",
+      "7.8 Churn Prediction and Prevention 193\n",
+      "7.9 Market Trend Analysis  195\n",
+      "7.10 A/B Testing and Experimentation 198\n",
+      "8 International Expansion and Localization  207\n",
+      "8.1 Cultural Adaptation and Sensitivity  210\n",
+      "8.2 Tax and Duty Management  211\n",
+      "8.3 International Shipping Solutions 215\n",
+      "8.4 Cross-Border Data Privacy 216\n",
+      "8.5 Global Market Research 217\n",
+      "8.6 Local Partnership Development  218\n",
+      "8.7 International SEO Optimization 219\n",
+      "8.8 Multi-Language Implementation   220\n",
+      "8.9 Regulatory Compliance by Region 221\n",
+      "8.10 Currency Management Systems 223\n",
+      "8.11 Global Brand Management 224\n",
+      "8.12 Localization Strategy Development 225\n",
+      " 8.13 Local Payment Method Integration 226\n",
+      " 8.14 Regional Marketing Strategies 227\n",
+      "8.15 Local Customer Support 229\n",
+      "9 Payment Systems and Financial Technology  232\n",
+      "9.1 Refund and Chargeback Management 237\n",
+      "9.2 International Payment Solutions 240\n",
+      "9.3 Payment Analytics and Reporting   242\n",
+      " 9.4 Subscription Billing Systems  247\n",
       "\n",
       "```json\n",
       "[\n",
-      "{\"chapter_number\": \"1\", \"chapter_title\": \"Smart Grid and Energy Management\", \"start_page\": 3, \"end_page\": 36},\n",
-      "{\"chapter_number\": \"2\", \"chapter_title\": \"Green Building and Energy Efficiency\", \"start_page\": 37, \"end_page\": 68},\n",
-      "{\"chapter_number\": \"3\", \"chapter_title\": \"Energy Storage and Battery Technology\", \"start_page\": 69, \"end_page\": 96},\n",
-      "{\"chapter_number\": \"4\", \"chapter_title\": \"Electric Vehicle Infrastructure\", \"start_page\": 97, \"end_page\": 108},\n",
-      "{\"chapter_number\": \"5\", \"chapter_title\": \"Renewable Energy Systems\", \"start_page\": 109, \"end_page\": 141},\n",
-      "{\"chapter_number\": \"6\", \"chapter_title\": \"Hydrogen and Fuel Cell Technology\", \"start_page\": 142, \"end_page\": 182},\n",
-      "{\"chapter_number\": \"7\", \"chapter_title\": \"Carbon Capture and Climate Solutions\", \"start_page\": 183, \"end_page\": 213},\n",
-      "{\"chapter_number\": \"8\", \"chapter_title\": \"Circular Economy and Waste Management\", \"start_page\": 214, \"end_page\": 271}\n",
+      "{\"chapter_number\": \"1\", \"chapter_title\": \"Digital Marketing for E-commerce\", \"start_page\": 1, \"end_page\": 17},\n",
+      "{\"chapter_number\": \"2\", \"chapter_title\": \"Marketplace and Multi-Vendor Platforms\", \"start_page\": 18, \"end_page\": 38},\n",
+      "{\"chapter_number\": \"3\", \"chapter_title\": \"Customer Experience and Personalization\", \"start_page\": 39, \"end_page\": 70},\n",
+      "{\"chapter_number\": \"4\", \"chapter_title\": \"Supply Chain and Logistics\", \"start_page\": 71, \"end_page\": 128},\n",
+      "{\"chapter_number\": \"5\", \"chapter_title\": \"E-commerce Platform Development\", \"start_page\": 129, \"end_page\": 148},\n",
+      "{\"chapter_number\": \"6\", \"chapter_title\": \"Mobile Commerce and Apps\", \"start_page\": 149, \"end_page\": 175},\n",
+      "{\"chapter_number\": \"7\", \"chapter_title\": \"Data Analytics and Business Intelligence\", \"start_page\": 176, \"end_page\": 206},\n",
+      "{\"chapter_number\": \"8\", \"chapter_title\": \"International Expansion and Localization\", \"start_page\": 207, \"end_page\": 231},\n",
+      "{\"chapter_number\": \"9\", \"chapter_title\": \"Payment Systems and Financial Technology\", \"start_page\": 232, \"end_page\": 248}\n",
       "]\n",
       "```\n"
      ]
     }
    ],
    "source": [
-    "for i in synthetic_data[200]:\n",
+    "for i in synthetic_data[220]:\n",
     "    print(i)"
    ]
   },
@@ -271,32 +252,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "a5df61f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4536"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(synthetic_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "f147cd86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_full= synthetic_data[:20]  # this is because I ran independently the generator for \n",
+    "data_full= synthetic_data   # this is because I ran independently the generator for \n",
     "                            # the full data and the chapters data\n",
-    "#data_chapters = synthetic_data[:80]"
+    "#data_chapters = synthetic_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "694c9c89",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_data = data_full + data_chapters\n",
-    "n_data_to_keep = 10000\n",
+    "n_data_to_keep = 15000\n",
     "\n",
     "final_data = random.sample(all_data, n_data_to_keep)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4d5abdf3",
    "metadata": {},
    "outputs": [],
@@ -307,27 +309,6 @@
     "    pickle.dump(final_data, f)\n",
     "\n",
     "logging.info(f\"Saved synthetic data to {output_path}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "f1ff4c60",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.2"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "42/1000 * 100"
    ]
   },
   {
