organised folders and fixed load_fake_data

--- a/notebooks/load_fake_data.ipynb
+++ b/notebooks/load_fake_data.ipynb
@@ -1,17 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "78681171",
+   "metadata": {},
+   "source": [
+    "# 🧠 Chapter Extraction and TOC Processing Pipeline\n",
+    "\n",
+    "This notebook is part of a larger project aimed at **fine-tuning the `Qwen-3.06b_4at` large language model** to better handle noisy, imperfect table of contents (TOCs) extracted from real-world documents. The ultimate goal is to build a robust system that can understand and structure TOC-like data even when it's incomplete, inconsistent, or formatted poorly.\n",
+    "  \n",
+    "  \n",
+    "## 📥 Source of the Data\n",
+    "\n",
+    "The `.docx` files processed in this notebook were **distilled using a Large Language Model (LLM)** from complex academic and technical PDFs. This distillation step extracts structured chapter text, headings, and subheadings into a clean, consistent format suitable for automated parsing.\n",
+    "\n",
+    "## ⚙️ What This Notebook Does\n",
+    "\n",
+    "- Loads `.docx` files containing chapter-based content using `python-docx`\n",
+    "- Parses and cleans text, preserving paragraph structure and headings\n",
+    "- **Transforms the raw `.docx` data into structured `.json` files** that can be used for further processing\n",
+    "- Prepares the output to be used in later stages, such as generating synthetic noisy TOCs or training/evaluation pipelines\n",
+    "\n",
+    "## ➕ Adding Your Own Data\n",
+    "\n",
+    "You can easily extend this workflow by adding your own `.docx` files. To ensure your data is compatible:\n",
+    "\n",
+    "- Follow the **same formatting structure** (use clear section headings, avoid unusual indentation or styles)\n",
+    "- Save your files to the `synthetic_data/docx/` directory\n",
+    "- The parser expects documents to be organized with **consistent, LLM-friendly formatting**, as seen in the original examples\n",
+    "\n",
+    "Once added, your `.docx` file will be parsed and included in the same JSON-based transformation process.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e4f8fb57",
+   "execution_count": null,
+   "id": "247b9f69",
    "metadata": {},
    "outputs": [],
    "source": [
     "from docx import Document\n",
     "import json\n",
-    "import re\n",
-    "from collections import OrderedDict\n",
-    "import os"
+    "import os\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('../src'))\n",
+    "from distilled_data_processing.toc_parsing import parse_structured_toc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b6eaec2",
+   "metadata": {},
+   "source": [
+    "## Inspecting a Sample `.docx`\n",
+    "\n",
+    "Load a `.docx` file, extract all non-empty paragraphs, and print them to inspect the document structure.  \n",
+    "Then parse the text into a structured JSON format using `parse_structured_toc` and print the result for review.\n"
    ]
   },
   {
@@ -19,90 +64,38 @@
    "execution_count": null,
    "id": "fb3090a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Artificial Intelligence and Machine Learning\n",
+      "Chapter 1: Introduction to Artificial Intelligence\n",
+      "Chapter 2: Machine Learning Fundamentals\n",
+      "Chapter 3: Neural Networks and Deep Learning\n",
+      "Chapter 4: Computer Vision Applications\n",
+      "Chapter 5: Natural Language Processing\n",
+      "Chapter 6: Reinforcement Learning Systems\n",
+      "Chapter 7: AI Ethics and Bias Prevention\n",
+      "Chapter 8: Automated Decision Making\n",
+      "Chapter 9: AI in Healthcare and Medicine\n"
+     ]
+    }
+   ],
    "source": [
     "# Inspect data\n",
-    "# doc = Document(\"../synthetic_data/docx/2_chapter.docx\")\n",
+    "doc = Document(\"../synthetic_data/docx/2_chapter.docx\")\n",
     "\n",
-    "# # Every paragraph (including headings)\n",
-    "# docx_text = \"\\n\".join(p.text for p in doc.paragraphs if p.text.strip())\n",
+    "# Every paragraph (including headings)\n",
+    "docx_text = \"\\n\".join(p.text for p in doc.paragraphs if p.text.strip())\n",
     "\n",
-    "# # Every paragraph (including headings)\n",
-    "# for p in doc.paragraphs:\n",
-    "#     print(p.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a71393b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_structured_toc(text):\n",
-    "    lines = [line.strip() for line in text.strip().splitlines() if line.strip()]\n",
-    "    books = []\n",
-    "    \n",
-    "    current_book = None\n",
-    "    current_chapter = None\n",
-    "    \n",
-    "    # Regex patterns\n",
-    "    book_title_re = re.compile(r\"^(\\d+)\\.\\s+(.+)\", re.IGNORECASE)\n",
-    "    chapter_re = chapter_re = re.compile(r\"^[•\\*]?\\s*Chapter\\s+(\\d+):\\s+(.+)$\", re.IGNORECASE)\n",
-    "    subchapter_re = re.compile(r\"^(\\d+)\\.(\\d+)\\s+(.+)$\")\n",
+    "# Every paragraph (including headings)\n",
+    "for p in doc.paragraphs[:10]:\n",
+    "    print(p.text)\n",
     "\n",
-    "    for line in lines:\n",
-    "        # Check if this is a new book title\n",
-    "        if (match := book_title_re.match(line)):\n",
-    "            # Save previous book if exists\n",
-    "            if current_book:\n",
-    "                books.append(current_book)\n",
-    "            \n",
-    "            # Start new book\n",
-    "            current_book = OrderedDict()\n",
-    "            current_book[\"id\"] = int(match.group(1))\n",
-    "            current_book[\"name\"] = match.group(2).strip()\n",
-    "            current_book[\"chapters_counts\"] = 0\n",
-    "            current_book[\"chapters\"] = []\n",
-    "            current_chapter = None\n",
-    "\n",
-    "        # Check if this is a chapter\n",
-    "        elif (match := chapter_re.match(line)) and current_book:\n",
-    "            number = int(match.group(1))\n",
-    "            title = match.group(2).strip()\n",
-    "            current_chapter = {\n",
-    "                \"number\": number,\n",
-    "                \"title\": title,\n",
-    "                \"subchapter_count\": 0,\n",
-    "                \"subchapters\": []\n",
-    "            }\n",
-    "            current_book[\"chapters_counts\"] = len(current_book[\"chapters\"])\n",
-    "            current_book[\"chapters\"].append(current_chapter)\n",
-    "\n",
-    "        # Check if this is a subchapter\n",
-    "        elif (match := subchapter_re.match(line)) and current_chapter:\n",
-    "            sub_number = f\"{match.group(1)}.{match.group(2)}\"\n",
-    "            title = match.group(3).strip()\n",
-    "            current_chapter[\"subchapters\"].append({\n",
-    "                \"number\": sub_number,\n",
-    "                \"title\": title\n",
-    "            })\n",
-    "            # Update subchapter count\n",
-    "            current_chapter[\"subchapter_count\"] = len(current_chapter[\"subchapters\"])\n",
-    "    # Don't forget to add the last book\n",
-    "    if current_book:\n",
-    "        books.append(current_book)\n",
-    "\n",
-    "    # If only one book, return it directly (maintains backward compatibility)\n",
-    "    if len(books) == 1:\n",
-    "        return books[0]\n",
-    "    \n",
-    "    # If multiple books, return list\n",
-    "    return books\n",
-    "\n",
-    "\n",
-    "# parsed = parse_structured_toc(docx_text)\n",
-    "# print(json.dumps(parsed, indent=2, ensure_ascii=False))"
+    "# Inspect final json format\n",
+    "parsed = parse_structured_toc(docx_text)\n",
+    "print(json.dumps(parsed, indent=2, ensure_ascii=False))"
    ]
   },
   {
@@ -110,7 +103,8 @@
    "id": "803d02d1",
    "metadata": {},
    "source": [
-    "### Process text and store in "
+    "## Process text and store in local directory\n",
+    "Lists `.docx` files in the source directory, filters out temporary files, and processes files ending with `_full.docx` and `_chapter.docx` separately. Each document is loaded, its non-empty paragraphs extracted, and parsed into structured TOC data using `parse_structured_toc`. The parsed results are collected and saved as JSON files in the output directory for further use.\n"
    ]
   },
   {
