added data generation description

--- a/notebooks/load_distilled_data.ipynb
+++ b/notebooks/load_distilled_data.ipynb
@@ -5,23 +5,20 @@
    "id": "78681171",
    "metadata": {},
    "source": [
-    "# 🧠 Chapter Extraction and TOC Processing Pipeline\n",
+    "# 📄 DOCX to JSON Data Processing Pipeline\n",
     "\n",
-    "This notebook is part of a larger project aimed at **fine-tuning the `Qwen-3.06b_4at` large language model** to better handle noisy, imperfect table of contents (TOCs) extracted from real-world documents. The ultimate goal is to build a robust system that can understand and structure TOC-like data even when it's incomplete, inconsistent, or formatted poorly.\n",
-    "  \n",
-    "  \n",
-    "## 📥 Source of the Data\n",
+    "## Source of the Data\n",
     "\n",
-    "The `.docx` files processed in this notebook were **distilled using a Large Language Model (LLM)** from complex academic and technical PDFs. This distillation step extracts structured chapter text, headings, and subheadings into a clean, consistent format suitable for automated parsing.\n",
+    "The `.docx` files processed in this notebook were **distilled using a Large Language Model (LLM)** from complex academic and technical PDFs. This distillation step extracts structured chapter text, headings, and subheadings into a consistent format suitable for automated parsing.\n",
     "\n",
-    "## ⚙️ What This Notebook Does\n",
+    "## What This Notebook Does\n",
     "\n",
     "- Loads `.docx` files containing chapter-based content using `python-docx`\n",
     "- Parses and cleans text, preserving paragraph structure and headings\n",
     "- **Transforms the raw `.docx` data into structured `.json` files** that can be used for further processing\n",
     "- Prepares the output to be used in later stages, such as generating synthetic noisy TOCs or training/evaluation pipelines\n",
     "\n",
-    "## ➕ Adding Your Own Data\n",
+    "## Adding Your Own Data\n",
     "\n",
     "You can easily extend this workflow by adding your own `.docx` files. To ensure your data is compatible:\n",
     "\n",
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "f0bdb9d2",
    "metadata": {},
    "outputs": [],
@@ -141,6 +138,14 @@
     "with open(os.path.join(output_dir, \"all_chapters.json\"), \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(chapters_results, f, indent=2, ensure_ascii=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07d0ff3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
