--- a/notebooks/generate_synthetic_data.ipynb
+++ b/notebooks/generate_synthetic_data.ipynb
@@ -1,18 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b57df059",
+   "metadata": {},
+   "source": [
+    "# 📊 Synthetic Training Data Generation for TOC Processing\n",
+    "\n",
+    "## Purpose\n",
+    "Generates synthetic training data for fine-tuning the `Qwen-3.06b_4at` model to handle noisy, imperfect table of contents (TOCs) from real-world documents.\n",
+    "\n",
+    "## What It Does\n",
+    "1. **Loads** clean TOC data (`all_full.json` and `all_chapters.json`) and noise patterns (`noise_toc.pkl`)\n",
+    "  - `all_full.json`: Contains complete TOC structure with chapters and subchapters\n",
+    "  - `all_chapters.json`: Contains only chapter-level data (no subchapters)\n",
+    "2. **Generates** synthetic examples by applying various noise parameters:\n",
+    "  - Subchapter/chapter random noise\n",
+    "  - Systematic noise patterns  \n",
+    "  - Additional subchapter injection\n",
+    "3. **Creates** realistic document extraction errors (OCR artifacts, formatting issues, missing page numbers)\n",
+    "4. **Outputs** paired examples: noisy TOC text → clean JSON structure\n",
+    "5. **Samples** 15,000 final examples for training dataset from combined data sources\n",
+    "\n",
+    "## Output\n",
+    "- Training dataset saved as `synthetic_toc.pkl`\n",
+    "- Each example contains noisy input TOC and target structured JSON\n",
+    "- Designed to teach the model robust TOC parsing despite imperfect inputs\n",
+    "\n",
+    "## Context\n",
+    "Part of a larger pipeline to build a robust system for extracting chapter structure from messy, real-world document TOCs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "390a5dbe",
+   "execution_count": null,
+   "id": "d63daf44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from generator import generate_synthetic_data\n",
     "import logging\n",
-    "import sys\n",
     "import json \n",
     "import pickle\n",
-    "import random"
+    "import random\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('../src'))\n",
+    "from synthetic_data_generator.generator import generate_synthetic_data"
    ]
   },
   {
@@ -20,12 +53,12 @@
    "id": "3477b911",
    "metadata": {},
    "source": [
-    "### Setup Logging"
+    "### Logging Configuration Setup\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0eb9c6c7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +66,7 @@
     "# set logging\n",
     "logging.getLogger().handlers.clear()\n",
     "logging.basicConfig(\n",
-    "    level=logging.DEBUG,  # Set to DEBUG\n",
+    "    level=logging.DEBUG,  \n",
     "    format='%(levelname)s: %(message)s',\n",
     "    stream=sys.stdout,\n",
     "    force=True\n",
@@ -69,24 +102,51 @@
    "id": "11e32a05",
    "metadata": {},
    "source": [
-    "### Generate"
+    "## Noise Parameter Configuration\n",
+    "\n",
+    "Defines randomness parameters for synthetic data generation across four dimensions:\n",
+    "\n",
+    "- **`subchapters_random_noise_param`**: Random, non-repeating noise applied to subchapters (probabilities: 10%, 20%, 30%)\n",
+    "- **`chapters_random_noise_param`**: Random, non-repeating noise applied to chapters (probabilities: 10%, 30%)  \n",
+    "- **`chapters_systemic_noise_param`**: Systematic noise that repeats consistently across all chapters (probabilities: 10%, 10%, 30%)\n",
+    "- **`add_subchapters_param`**: Probability of adding extra subchapters to TOC structure (probabilities: 20%, 30%)\n",
+    "\n",
+    "Each list creates parameter combinations for the generation loop, with values representing noise probability from 0 (no noise) to 1 (maximum noise certainty).  \n",
+    "\n",
+    "You can play with these parameter and generate new data with a specific level of noise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "2e5b9349",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subchapters_random_noise_param = [.1, .2, .3]\n",
+    "chapters_random_noise_param = [.1, .3]\n",
+    "chapters_systemic_noise_param = [.1, .1, .3]\n",
+    "add_subchapters_param = [.2, .3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc92ff3a",
+   "metadata": {},
+   "source": [
+    "## Synthetic Data Generation Loop\n",
+    "\n",
+    "Executes nested loops across all noise parameter combinations, running n° iterations per configuration to generate diverse synthetic examples. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2fd3fc84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Randomness parameters for synthetic data generation\n",
-    "subchapters_random_noise_param = [.1, .2, .3]\n",
-    "chapters_random_noise_param = [.1, .3]\n",
-    "chapters_systemic_noise_param = [.1, .1, .3]\n",
-    "add_subchapters_param = [.2, .3]\n",
-    "\n",
-    "# parameters for the number of iterations\n",
-    "n_iterations = 3\n",
+    "n_iterations = 3 # define how many times to run the generation process\n",
     "synthetic_data = []\n",
     "\n",
     "for chapters_random_noise in chapters_random_noise_param:\n",
@@ -114,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2908f1f5",
    "metadata": {},
    "outputs": [
@@ -238,6 +298,7 @@
     }
    ],
    "source": [
+    "# inspect the generated synthetic data\n",
     "for i in synthetic_data[220]:\n",
     "    print(i)"
    ]
@@ -247,62 +308,37 @@
    "id": "2e9d245b",
    "metadata": {},
    "source": [
-    "### Final Processing and Storage"
+    "## Final Dataset Sampling and Export\n",
+    "\n",
+    "Randomly samples n° examples from the generated synthetic data to create the final training dataset. Saves the curated dataset as a pickle file for use in model training and evaluation pipelines."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a5df61f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4536"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(synthetic_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f147cd86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_full= synthetic_data   # this is because I ran independently the generator for \n",
-    "                            # the full data and the chapters data\n",
-    "#data_chapters = synthetic_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "694c9c89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_data = data_full + data_chapters\n",
-    "n_data_to_keep = 15000\n",
+    "# Use this code if you want to compbine data from the full data and the chapters data\n",
     "\n",
-    "final_data = random.sample(all_data, n_data_to_keep)"
+    "#data_full= synthetic_data   # this is because I ran independently the generator for \n",
+    "                            # the full data and the chapters data\n",
+    "#data_chapters = synthetic_data\n",
+    "#all_data = data_full + data_chapters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4d5abdf3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract a random sample of data\n",
+    "n_data_to_keep = 15000\n",
+    "final_data = random.sample(synthetic_data, n_data_to_keep)\n",
+    "\n",
     "# Save the generated data\n",
     "output_path = f\"../../synthetic_data/training_dataset/synthetic_toc.pkl\"\n",
     "with open(output_path, \"wb\") as f:\n",
@@ -310,14 +346,6 @@
     "\n",
     "logging.info(f\"Saved synthetic data to {output_path}\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd1a9d5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
