--- a/notebooks/generate_synthetic_data.ipynb
+++ b/notebooks/generate_synthetic_data.ipynb
@@ -84,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "160584ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"../../synthetic_data/json/all_full.json\"\n",
+    "data_path = \"../../data/json/all_full.json\"\n",
     "with open(data_path, \"r\", encoding=\"utf-8\") as f:\n",
     "    json_data = json.load(f)\n",
     "\n",
-    "with open(\"../../synthetic_data/noise_toc.pkl\", \"rb\") as f:\n",
+    "with open(\"../../data/noise_toc.pkl\", \"rb\") as f:\n",
     "    toc_noise = pickle.load(f)"
    ]
   },
@@ -340,7 +340,7 @@
     "final_data = random.sample(synthetic_data, n_data_to_keep)\n",
     "\n",
     "# Save the generated data\n",
-    "output_path = f\"../../synthetic_data/training_dataset/synthetic_toc.pkl\"\n",
+    "output_path = f\"../../data/training_dataset/synthetic_toc.pkl\"\n",
     "with open(output_path, \"wb\") as f:\n",
     "    pickle.dump(final_data, f)\n",
     "\n",
